added card section

--- a/index.html
+++ b/index.html
@@ -47,5 +47,63 @@
         </header>
                 <!-- Header end here  -->
 
+
+                <!-- Main area start here  -->
+        <main>
+            <!-- Section 01 start here  -->
+        <section class="pillars-of-bd">
+            <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillars-cards">
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Innovation</h4>
+                    <p class="card-disc"> Creating new ideas and using technology to grow. It helps solve problems and improve lives.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Sustainability</h4>
+                    <p class="card-disc">Protecting the environment and using resources wisely. It ensures a better future for the next generations.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Infrastructure</h4>
+                    <p class="card-disc">Building strong and modern systems for development. It supports businesses and improves daily life.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Empowerment</h4>
+                    <p class="card-disc">Giving everyone the chance to succeed and be strong. It promotes equality and boosts community strength.</p>
+                </div>
+            </div>
+        </section>
+                <!-- Section 01 end here  -->
+
+
+                <!-- Section 02 start here  -->
+        <section class="vision-of-future">
+            <h2 class="vision-title">The Vision of Future</h2>
+            <p class="vision-description">Bangladesh 2.0 is about building a better future with technology, clean energy, and equal opportunities for everyone. The goal is to make the country stronger and more successful, creating a brighter future for all its people.</p>
+            <div class="vision-cards">
+                <div class="digital-card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Digital Transformation</h4>
+                    <p class="card-description">"Bangladesh 2.0" refers to the country's digital transformation, focusing on e-government, fintech, e-commerce, education, healthcare, and infrastructure. With initiatives like Digital Bangladesh Vision 2021, the goal is to foster economic growth, innovation, and inclusivity through advanced technology adoption.</p>
+                    <button class="digital-card-btn">Learn More</button>
+                </div>
+                <div class="green-card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Green Energy</h4>
+                    <p class="card-description">Bangladesh 2.0 aims to embrace green energy through renewable sources like solar, wind, and hydro power, reducing carbon emissions and promoting sustainable development for a cleaner, more energy-efficient future.reducing carbon emissions and promoting sustainable development for a cleaner, more.</p>
+                    <button class="green-card-btn">Learn More</button>
+                </div>
+                <div class="modern-card">
+                    <img src="./assets/card-icon.png" alt="card photo">
+                    <h4 class="card-title">Modern Infrastructure</h4>
+                    <p class="card-description">Bangladesh 2.0 focuses on modern infrastructure development, including smart cities, improved transportation, digital connectivity, and sustainable buildings, aiming to enhance urban living, boost economic growth, and ensure efficient public services.boost economic growth, and ensure efficient public services.</p>
+                    <button class="modern-card-btn">Learn More</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
