added donate section

--- a/index.html
+++ b/index.html
@@ -182,6 +182,27 @@
                 </div>
             </div>
         </section>
+                <!-- Section 03 end here            -->
+
+
+                <!-- section 04 start here  -->
+
+        <section>
+            <div class="donate">
+                <h2 class="donate-title">Donate Today</h2>
+                <p class="donate-description">
+                    Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.
+                </p>
+                <div class="donate-cards">
+                    <div class="donate-card">100 TK</div>
+                    <div class="donate-card">200 TK</div>
+                    <div class="donate-card">500 TK</div>
+                    <div class="donate-card">1000 TK</div>
+                </div>
+                <input type="button" value="Other Amount (Taka)"> <br>
+                <button class="donate-btn">Done Now</button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
