--- a/index.html
+++ b/index.html
@@ -203,6 +203,41 @@
                 <button class="donate-btn">Done Now</button>
             </div>
         </section>
+                <!-- section 04 end here  -->
+
+
+                <!-- section 05 start here  -->
+        <section class="subscribe-section">
+            <div class="subscribe">
+                <h2 class="subscribe-title">
+                    Subscribe Newsletter
+                </h2>
+                <p class="subscribe-description">
+                    Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.
+                </p>
+                <div class="sent-section">
+                    <input type="email" placeholder="Enter your email here" class="sent-mail">
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+                <p class="promiss">We promise not to spam you!</p>
+            </div>
+        </section>
     </main>
+                <!-- Main section end here  -->
+
+
+                <!-- Footer start here  -->
+    <footer>
+        <div class="footer-container">
+            <h2 class="footer-title">
+                Bangladesh 2.0
+            </h2>
+            <div class="footer-icon">
+                <img src="./assets/facebook.png" alt="facebook">
+                <img src="./assets/instagram.png" alt="instagram">
+                <img src="./assets/x.png" alt="x">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
