--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <!-- Navigation start here  -->
             <nav class="nav-container">
                 <div class="nav-title">Bangladesh 2.0</div>
-                <div class="nav-btn">Sign In</div>
+                <div class="nav-btn btn">Sign In</div>
             </nav>
                 <!-- Navigation end here  -->
 
 
                 <!-- Hero area start here  -->
-            <div class="hero-container">
+            <div class="hero-container shadow">
                 <div class="hero-content">
                     <h4 class="hero-sub-title">
                         Bangladesh 2.0
@@ -37,7 +37,7 @@
                         Idea , innovation ,<br>
                         vision and challenges in <br> New Bangladesh.
                     </h2>
-                    <button class="hero-btn">Explore New Bangladesh</button>
+                    <button class="hero-btn btn">Explore New Bangladesh</button>
                 </div>
                 <div class="hero-img">
                     <img src="./assets/hero.png" alt="hero area photo">
@@ -54,22 +54,22 @@
         <section class="pillars-of-bd">
             <h2 class="pillars-title">Pillars of "Bangladesh 2.0"</h2>
             <div class="pillars-cards">
-                <div class="card">
+                <div class="card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Innovation</h4>
                     <p class="card-disc"> Creating new ideas and using technology to grow. It helps solve problems and improve lives.</p>
                 </div>
-                <div class="card">
+                <div class="card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Sustainability</h4>
                     <p class="card-disc">Protecting the environment and using resources wisely. It ensures a better future for the next generations.</p>
                 </div>
-                <div class="card">
+                <div class="card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Infrastructure</h4>
                     <p class="card-disc">Building strong and modern systems for development. It supports businesses and improves daily life.</p>
                 </div>
-                <div class="card">
+                <div class="card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Empowerment</h4>
                     <p class="card-disc">Giving everyone the chance to succeed and be strong. It promotes equality and boosts community strength.</p>
@@ -84,27 +84,27 @@
             <h2 class="vision-title">The Vision of Future</h2>
             <p class="vision-description">Bangladesh 2.0 is about building a better future with technology, clean energy, and equal opportunities for everyone. The goal is to make the country stronger and more successful, creating a brighter future for all its people.</p>
             <div class="vision-cards">
-                <div class="digital-card">
+                <div class="digital-card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Digital Transformation</h4>
                     <p class="card-description">"Bangladesh 2.0" refers to the country's digital transformation, focusing on e-government, fintech, e-commerce, education, healthcare, and infrastructure. With initiatives like Digital Bangladesh Vision 2021, the goal is to foster economic growth, innovation, and inclusivity through advanced technology adoption.</p>
-                    <button class="digital-card-btn">Learn More</button>
+                    <button class="digital-card-btn btn">Learn More</button>
                 </div>
-                <div class="green-card">
+                <div class="green-card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Green Energy</h4>
                     <p class="card-description">Bangladesh 2.0 aims to embrace green energy through renewable sources like solar, wind, and hydro power, reducing carbon emissions and promoting sustainable development for a cleaner, more energy-efficient future.reducing carbon emissions and promoting sustainable development for a cleaner, more.</p>
-                    <button class="green-card-btn">Learn More</button>
+                    <button class="green-card-btn btn">Learn More</button>
                 </div>
-                <div class="modern-card">
+                <div class="modern-card shadow">
                     <img src="./assets/card-icon.png" alt="card photo">
                     <h4 class="card-title">Modern Infrastructure</h4>
                     <p class="card-description">Bangladesh 2.0 focuses on modern infrastructure development, including smart cities, improved transportation, digital connectivity, and sustainable buildings, aiming to enhance urban living, boost economic growth, and ensure efficient public services.boost economic growth, and ensure efficient public services.</p>
-                    <button class="modern-card-btn">Learn More</button>
+                    <button class="modern-card-btn btn">Learn More</button>
                 </div>
             </div>
 
-            <div class="quatation">
+            <div class="quatation shadow">
                 <q>Bangladesh 2.0 is a vision for the future, where the country can lead the world with innovation, creativity, and social business. I believe that if we focus on social business, we can eliminate poverty and bring about change in society. This is not just a model for Bangladesh, but for the entire world. By giving people the opportunity to solve their own problems, we can build a society where everyone has a chance to succeed, no one is left behind, and a just and strong nation is created.</q>
                 <h3>Dr. Muhammad Yunus</h3>
                 <p>Chief Adviser of the People's Republic of Bangladesh</p>
@@ -121,7 +121,7 @@
                 <div class="news-container">
 
                     <!-- news card 01  -->
-                    <div class="news-card-one">
+                    <div class="news-card-one shadow">
                         <img src="./assets/satelite.png" alt="satelite" class="news-img">
                         <div class="news-content">
                             <h2 class="news-title">
@@ -136,12 +136,12 @@
                                 Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a <br> common obligation of all people and all countries—not until then shall we,
                                 with a certain degree of justification, be able <br> to speak of humankind as civilized
                             </p>
-                            <button class="news-btn">Read More</button>
+                            <button class="news-btn btn">Read More</button>
                         </div>
                     </div>
 
                         <!-- news card 02 -->
-                    <div class="news-card-two">
+                    <div class="news-card-two shadow">
                         <div class="news-content">
                             <h2 class="news-title">
                                 Bangladesh Launches New Satellite
@@ -155,13 +155,13 @@
                                 Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a <br> common obligation of all people and all countries—not until then shall we,
                                 with a certain degree of justification, be able <br> to speak of humankind as civilized
                             </p>
-                            <button class="news-btn">Read More</button>
+                            <button class="news-btn btn">Read More</button>
                         </div>
                         <img src="./assets/satelite.png" alt="satelite" class="news-img">
                     </div>
 
                         <!-- news card 03 -->
-                    <div class="news-card-one">
+                    <div class="news-card-one shadow">
                         <img src="./assets/satelite.png" alt="satelite" class="news-img">
                         <div class="news-content">
                             <h2 class="news-title">
@@ -176,7 +176,7 @@
                                 Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a <br> common obligation of all people and all countries—not until then shall we,
                                 with a certain degree of justification, be able <br> to speak of humankind as civilized
                             </p>
-                            <button class="news-btn">Read More</button>
+                            <button class="news-btn btn">Read More</button>
                         </div>
                     </div>
                 </div>
@@ -194,20 +194,20 @@
                     Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.
                 </p>
                 <div class="donate-cards">
-                    <div class="donate-card">100 TK</div>
-                    <div class="donate-card">200 TK</div>
-                    <div class="donate-card">500 TK</div>
-                    <div class="donate-card">1000 TK</div>
+                    <div class="donate-card btn">100 TK</div>
+                    <div class="donate-card color btn">200 TK</div>
+                    <div class="donate-card btn">500 TK</div>
+                    <div class="donate-card btn">1000 TK</div>
                 </div>
-                <input type="button" value="Other Amount (Taka)"> <br>
-                <button class="donate-btn">Done Now</button>
+                <input type="number" placeholder="Other Amount (Taka)"> <br>
+                <button class="donate-btn btn">Done Now</button>
             </div>
         </section>
                 <!-- section 04 end here  -->
 
 
                 <!-- section 05 start here  -->
-        <section class="subscribe-section">
+        <section class="subscribe-section shadow">
             <div class="subscribe">
                 <h2 class="subscribe-title">
                     Subscribe Newsletter
@@ -217,7 +217,7 @@
                 </p>
                 <div class="sent-section">
                     <input type="email" placeholder="Enter your email here" class="sent-mail">
-                    <button class="subscribe-btn">Subscribe</button>
+                    <button class="subscribe-btn btn">Subscribe</button>
                 </div>
                 <p class="promiss">We promise not to spam you!</p>
             </div>
